:sparkles: / feat: update domain